--- a/index.html
+++ b/index.html
@@ -1,7 +1,118 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="../../favicon.ico">
+
+    <!-- meta tagovi moraju biti prvi, sve ostalo ide ispod -->
+    <title>MMT - projekt</title>
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
+
+   
+  </head>
+  <body style="background-color:rgba(217, 217, 217, 0.8)">
+    <div style="height: 80px;">
+
+    <div id="sticker" style="position: fixed;">
+      <div class="dropdown">
+  <button id="btnn" class="center-block" data-toggle="dropdown"><i class="fa fa-home fa-4x"></i>
+  </button>
+    <ul class="dropdown-menu pull-center">
+      <li><a href="#">HTML</a></li>
+      <li><a href="#">CSS</a></li>
+      <li><a href="#">JavaScript</a></li>
+    </ul>
+</div>
+    </div>
+    </div>
+  <div></div>
+
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <img class="first-slide" src="images/1.jpg" alt="First slide" style="width:100%; height:100%;">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Naslov slike 1</h1>
+              <p>Neki tekst i tako.</p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img class="second-slide" src="images/2.jpg" alt="Second slide" style="height:100%; width:100%;">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Naslov slike 2</h1>
+              <p>Nešto meh</p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img class="third-slide" src="images/3.jpg" alt="Third slide" style="width:100%; height:100%;">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Nalov slike 3</h1>
+              <p>Nemam pojma</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span aria-hidden="true"><i class="fa fa-arrow-circle-left fa-4x" style="margin-top:210px"></i></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span aria-hidden="true"><i class="fa fa-arrow-circle-right fa-4x" style="margin-top:210px"></i></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
+    <div class="row" style="margin:0px;">
+      <div class="col-md-8 col-md-offset-2" style="border-top: rgba(155, 155, 155, 0.5) solid 1px; padding-bottom:20px;"></div>
+      <div class="col-md-6" style="padding-bottom:30px;">
+        <center>
+          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="200" height="200">
+          <h2>Marina Kovač</h2>
+          <p></p>
+          <p><a class="btn btn-success" href="#" role="button">Što me dijeli od željene djelatnosti? &raquo;</a></p>
+        </center>
+      </div>
+      <div class="col-md-6">
+        <center>
+          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="200" height="200">
+          <h2>Marko Bilić</h2>
+          <p></p>
+          <p><a class="btn btn-success" href="#" role="button">Što me dijeli od željene djelatnosti? &raquo;</a></p>
+        </center>
+      </div>
+    </div>
+
+    <div id="footer" style="background-color:#222222; width:100%; height:130px;">
+    </div>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
+    <script src="bootstrap-3.3.6-dist/js/jquery.sticky.js"></script>
+
+    <script>
+      $(document).ready(function(){
+        $("#sticker").sticky({topSpacing:0});
+      });
+    </script>
+  </body>
 </html>
