--- a/index.html
+++ b/index.html
@@ -17,22 +17,21 @@
 
    
   </head>
-  <body style="background-color:rgba(217, 217, 217, 0.8)">
+  <body style="background-color:rgba(217, 217, 217, 0.8);">
     <div style="height: 80px;">
-
-    <div id="sticker" style="position: fixed;">
-      <div class="dropdown">
-  <button id="btnn" class="center-block" data-toggle="dropdown"><i class="fa fa-home fa-4x"></i>
-  </button>
-    <ul class="dropdown-menu pull-center">
-      <li><a href="#">HTML</a></li>
-      <li><a href="#">CSS</a></li>
-      <li><a href="#">JavaScript</a></li>
-    </ul>
-</div>
+      <div id="sticker" style="position: fixed;">
+        <div class="dropdown">
+          <button id="btnn" class="center-block" data-toggle="dropdown"><i class="fa fa-home fa-4x"></i>
+          </button>
+          <ul class="dropdown-menu pull-center">
+            <li><a href="#">HTML</a></li>
+            <li><a href="#">CSS</a></li>
+            <li><a href="#">JavaScript</a></li>
+          </ul>
+        </div>
+      </div>
     </div>
-    </div>
-  <div></div>
+    <div></div>
 
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
@@ -81,10 +80,10 @@
     </div>
 
     <div class="row" style="margin:0px;">
-      <div class="col-md-8 col-md-offset-2" style="border-top: rgba(155, 155, 155, 0.5) solid 1px; padding-bottom:20px;"></div>
-      <div class="col-md-6" style="padding-bottom:30px;">
+      <div class="col-md-8 col-md-offset-2" style="border-top: rgba(155, 155, 155, 0.5) solid 1px; padding-bottom:30px;"></div>
+      <div class="col-md-6" style="padding-bottom:-130px;">
         <center>
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="200" height="200">
+          <img class="img-circle" src="images/marina.jpg" alt="Generic placeholder image" width="200" height="200">
           <h2>Marina Kovač</h2>
           <p></p>
           <p><a class="btn btn-success" href="#" role="button">Što me dijeli od željene djelatnosti? &raquo;</a></p>
@@ -92,7 +91,7 @@
       </div>
       <div class="col-md-6">
         <center>
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="200" height="200">
+          <img class="img-circle" src="images/marko.jpg" alt="Generic placeholder image" width="200" height="200">
           <h2>Marko Bilić</h2>
           <p></p>
           <p><a class="btn btn-success" href="#" role="button">Što me dijeli od željene djelatnosti? &raquo;</a></p>
@@ -100,9 +99,8 @@
       </div>
     </div>
 
-    <div id="footer" style="background-color:#222222; width:100%; height:130px;">
+    <div id="footer" style="background-color:#222222; width:100%;">
     </div>
-
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
