--- a/index.html
+++ b/index.html
@@ -83,16 +83,16 @@
       <div class="col-md-8 col-md-offset-2" style="border-top: rgba(155, 155, 155, 0.5) solid 1px; padding-bottom:30px;"></div>
       <div class="col-md-6" style="padding-bottom:-130px;">
         <center>
-          <img class="img-circle" src="images/marina.jpg" alt="Generic placeholder image" width="200" height="200">
-          <h2>Marina Kovač</h2>
+          <a href="marina.html"><img class="img-circle" src="images/marina.jpg" alt="Generic placeholder image" width="200" height="200"></a>
+          <h2><a href="podaci.html">Marina Kovač</a></h2>
           <p></p>
           <p><a class="btn btn-success" href="#" role="button">Što me dijeli od željene djelatnosti? &raquo;</a></p>
         </center>
       </div>
       <div class="col-md-6">
         <center>
-          <img class="img-circle" src="images/marko.jpg" alt="Generic placeholder image" width="200" height="200">
-          <h2>Marko Bilić</h2>
+          <a href="marko.html"><img class="img-circle" src="images/marko.jpg" alt="Generic placeholder image" width="200" height="200"></a>
+          <h2><a href="podaci.html">Marko Bilić</a></h2>
           <p></p>
           <p><a class="btn btn-success" href="#" role="button">Što me dijeli od željene djelatnosti? &raquo;</a></p>
         </center>
