--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
     </div>
     <div></div>
-
+	<center>
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
       <ol class="carousel-indicators">
@@ -41,8 +41,8 @@
         <li data-target="#myCarousel" data-slide-to="2"></li>
       </ol>
       <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <img class="first-slide" src="images/1.jpg" alt="First slide" style="width:100%; height:100%;">
+        <div class="item active center-block" style="width:1280px;">
+          <img class="first-slide" src="images/01.jpg" alt="First slide" style="width:100%; height:100%;">
           <div class="container">
             <div class="carousel-caption">
               <h1>Naslov slike 1</h1>
@@ -50,8 +50,8 @@
             </div>
           </div>
         </div>
-        <div class="item">
-          <img class="second-slide" src="images/2.jpg" alt="Second slide" style="height:100%; width:100%;">
+		<div class="item center-block" style="width:1280px;">
+          <img class="second-slide" src="images/02.jpg" alt="Second slide" style="height:100%; width:100%;">
           <div class="container">
             <div class="carousel-caption">
               <h1>Naslov slike 2</h1>
@@ -59,25 +59,26 @@
             </div>
           </div>
         </div>
-        <div class="item">
-          <img class="third-slide" src="images/3.jpg" alt="Third slide" style="width:100%; height:100%;">
+        <div class="item center-block" style="width:1280px;">
+          <img class="third-slide" src="images/03.png" alt="Third slide" style="width:100%; height:100%;">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Nalov slike 3</h1>
+              <h1>Naslov slike 3</h1>
               <p>Nemam pojma</p>
             </div>
           </div>
         </div>
       </div>
       <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span aria-hidden="true"><i class="fa fa-arrow-circle-left fa-4x" style="margin-top:210px"></i></span>
+        <span aria-hidden="true"><i class="fa fa-arrow-circle-left fa-3x" style="margin-top:160px"></i></span>
         <span class="sr-only">Previous</span>
       </a>
       <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span aria-hidden="true"><i class="fa fa-arrow-circle-right fa-4x" style="margin-top:210px"></i></span>
+        <span aria-hidden="true"><i class="fa fa-arrow-circle-right fa-3x" style="margin-top:160px"></i></span>
         <span class="sr-only">Next</span>
       </a>
     </div>
+	</center>
 
     <div class="row" style="margin:0px;">
       <div class="col-md-8 col-md-offset-2" style="border-top: rgba(155, 155, 155, 0.5) solid 1px; padding-bottom:30px;"></div>
@@ -97,6 +98,7 @@
           <p><a class="btn btn-success" href="#" role="button">Što me dijeli od željene djelatnosti? &raquo;</a></p>
         </center>
       </div>
+      <div class="razmak"></div>
     </div>
 
     <div id="footer" style="background-color:#222222; width:100%;">
