--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 	</center>
 
     <div class="row" style="margin:0px;">
-      <div class="col-md-8 col-md-offset-2" style="border-top: rgba(155, 155, 155, 0.5) solid 1px; padding-bottom:30px;"></div>
+      <div class="col-md-8 col-md-offset-2" style="border-top: rgba(155, 155, 155, 0.5) solid 1px; padding-bottom:90px;"></div>
       <div class="col-md-6" style="padding-bottom:-130px;">
         <center>
           <a href="marina.html"><img class="img-circle" src="images/marina.jpg" alt="Generic placeholder image" width="200" height="200"></a>
@@ -102,6 +102,9 @@
     </div>
 
     <div id="footer" style="background-color:#222222; width:100%;">
+      <br><br>
+      <p><a href="http://www.etfos.unios.hr/">ETFOS</a></p>
+      <p>Ova je stranica napravljena kao projekt za kolegij <a href="https://loomen.carnet.hr/course/view.php?id=3626">Multimedijska tehnika</a>&nbsp;- akademska godina 2015./2016.</p>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
