--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <div style="height: 80px;">
       <div id="sticker" style="position: fixed;">
         <div class="dropdown">
-          <button id="btnn" class="center-block" data-toggle="dropdown"><i class="fa fa-home fa-4x"></i>
+          <button id="btnn" class="center-block" data-toggle="dropdown"><i class="fa fa-bars fa-4x" aria-hidden="true"></i>
           </button>
           <ul class="dropdown-menu pull-center">
-            <li><a href="#">HTML</a></li>
-            <li><a href="#">CSS</a></li>
-            <li><a href="#">JavaScript</a></li>
+            <li><a href="marina.html">Marina želi biti <i class="fa fa-arrow-right" aria-hidden="true"></i>&nbsp;<i>Web Designer</i></a></li>
+            <li><a href="marko.html">Marko želi biti <i class="fa fa-arrow-right" aria-hidden="true"></i>&nbsp;<i> Software Developer</i></a></li>
+            <li><a href="#">Što nas dijeli od ostvarenja?</a></li>
           </ul>
         </div>
       </div>
