--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
+  <link rel="shortcut icon" href="images/favicon.ico">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="../../favicon.ico">
 
     <!-- meta tagovi moraju biti prvi, sve ostalo ide ispod -->
     <title>MMT - projekt</title>
@@ -32,79 +32,104 @@
       </div>
     </div>
     <div></div>
-	<center>
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner" role="listbox">
-        <div class="item active center-block" style="width:1280px;">
-          <img class="first-slide" src="images/01.jpg" alt="First slide" style="width:100%; height:100%;">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Naslov slike 1</h1>
-              <p>Neki tekst i tako.</p>
+    <div class="sve">
+  	<center>
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+          <div class="item active center-block" style="width:1280px;">
+            <img class="first-slide" src="images/01.jpg" alt="First slide" style="width:100%; height:100%;">
+            <div class="container">
+              <div class="carousel-caption">
+                <h1>Naslov slike 1</h1>
+                <p>Neki tekst i tako.</p>
+              </div>
+            </div>
+          </div>
+  		<div class="item center-block" style="width:1280px;">
+            <img class="second-slide" src="images/02.jpg" alt="Second slide" style="height:100%; width:100%;">
+            <div class="container">
+              <div class="carousel-caption">
+                <h1>Naslov slike 2</h1>
+                <p>Nešto meh</p>
+              </div>
+            </div>
+          </div>
+          <div class="item center-block" style="width:1280px;">
+            <img class="third-slide" src="images/03.png" alt="Third slide" style="width:100%; height:100%;">
+            <div class="container">
+              <div class="carousel-caption">
+                <h1>Naslov slike 3</h1>
+                <p>Nemam pojma</p>
+              </div>
             </div>
           </div>
         </div>
-		<div class="item center-block" style="width:1280px;">
-          <img class="second-slide" src="images/02.jpg" alt="Second slide" style="height:100%; width:100%;">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Naslov slike 2</h1>
-              <p>Nešto meh</p>
-            </div>
-          </div>
-        </div>
-        <div class="item center-block" style="width:1280px;">
-          <img class="third-slide" src="images/03.png" alt="Third slide" style="width:100%; height:100%;">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Naslov slike 3</h1>
-              <p>Nemam pojma</p>
-            </div>
-          </div>
-        </div>
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+          <span aria-hidden="true"><i class="fa fa-arrow-circle-left fa-3x" style="margin-top:160px"></i></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+          <span aria-hidden="true"><i class="fa fa-arrow-circle-right fa-3x" style="margin-top:160px"></i></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span aria-hidden="true"><i class="fa fa-arrow-circle-left fa-3x" style="margin-top:160px"></i></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span aria-hidden="true"><i class="fa fa-arrow-circle-right fa-3x" style="margin-top:160px"></i></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-	</center>
+  	</center>
 
-    <div class="row" style="margin:0px;">
-      <div class="col-md-8 col-md-offset-2" style="border-top: rgba(155, 155, 155, 0.5) solid 1px; padding-bottom:90px;"></div>
-      <div class="col-md-6" style="padding-bottom:-130px;">
-        <center>
-          <a href="marina.html"><img class="img-circle" src="images/marina.jpg" alt="Generic placeholder image" width="200" height="200"></a>
-          <h2><a href="podaci.html">Marina Kovač</a></h2>
-          <p></p>
-          <p><a class="btn btn-success" href="#" role="button">Što me dijeli od željene djelatnosti? &raquo;</a></p>
-        </center>
-      </div>
-      <div class="col-md-6">
-        <center>
-          <a href="marko.html"><img class="img-circle" src="images/marko.jpg" alt="Generic placeholder image" width="200" height="200"></a>
-          <h2><a href="podaci.html">Marko Bilić</a></h2>
-          <p></p>
-          <p><a class="btn btn-success" href="#" role="button">Što me dijeli od željene djelatnosti? &raquo;</a></p>
-        </center>
-      </div>
-      <div class="razmak"></div>
-    </div>
+      <div class="row" style="margin:0px;">
+        <div class="col-md-8 col-md-offset-2" style="border-top: rgba(155, 155, 155, 0.5) solid 1px; padding-bottom:90px;"></div>
+        <div class="col-md-6" style="padding-bottom:-130px;">
+          <center>
+            <a href="images/marina.jpg" target="_blank"><img class="img-circle" src="images/marina.jpg" alt="Generic placeholder image" width="200" height="200"></a>
+            <h2><a id="Marina">Marina Kovač</a></h2>
+            <p></p>
+            <p><a class="btn btn-success" href="#" role="button">Što me dijeli od željene djelatnosti? &raquo;</a></p>
+          </center>
+        </div>
+        <div class="col-md-6">
+          <center>
+            <a href="images/marko.jpg" target="_blank"><img class="img-circle" src="images/marko.jpg" alt="Generic placeholder image" width="200" height="200"></a>
+            <h2><a id="Marko">Marko Bilić</a></h2>
+            <p></p>
+            <p><a class="btn btn-success" href="#" role="button">Što me dijeli od željene djelatnosti? &raquo;</a></p>
+          </center>
+        </div>
+        
+      <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog" style="margin-top:150px;">
+          <div class="modal-content">
+            <div class="modal-header" style="padding:15px 20px;">
+              <button type="button" class="close" data-dismiss="modal"><i class="fa fa-times fa-lg" aria-hidden="true" style="color:#e63900;"></i></button>
+              <h4><i class="fa fa-user fa-lg" aria-hidden="true"></i>&nbsp;&nbsp;Podaci o studentu</h4>
+            </div>
+            <div class="modal-body" style="padding:20px 30px;">
+              <i class="fa fa-terminal" aria-hidden="true"></i>&nbsp;<label for="ime"</span>Ime:</label>&nbsp;&nbsp;Marko<br>
+              <i class="fa fa-terminal" aria-hidden="true"></i>&nbsp;<label for="prez"></span>Prezime:</label>&nbsp;&nbsp;Bilić<br>
+              <i class="fa fa-terminal" aria-hidden="true"></i>&nbsp;<label for="rodj"></span>Mjesto rođenja:</label>&nbsp;&nbsp;<a href="http://www.pozega.hr/" target="_blank">Požega</a><br>
+              <i class="fa fa-terminal" aria-hidden="true"></i>&nbsp;<label for="preb"></span>Prebivalište:</label>&nbsp;&nbsp;<a href="http://www.osijek.hr/" target="_blank">Osijek</a><br>
+              <i class="fa fa-terminal" aria-hidden="true"></i>&nbsp;<label for="osn"></span>Osnovna škola:</label>&nbsp;&nbsp;<a href="http://os-akanizlica-pozega.skole.hr/" target="_blank">OŠ Antuna Kanižlića Požega</a><br>
+              <i class="fa fa-terminal" aria-hidden="true"></i>&nbsp;<label for="sred"></span>Srednja škola:</label>&nbsp;&nbsp;<a href="http://www.tehnickaskola.net/" target="_blank">Tehnička škola Požega</a><br>
+              <i class="fa fa-terminal" aria-hidden="true"></i>&nbsp;<label for="faks"></span>Fakultet:</label>&nbsp;&nbsp;<a href="https://www.etfos.hr/" target="_blank">Elektrotehnički fakultet Osijek</a><br>
+            </div>
+            <div class="modal-footer"></div>
+          </div>
+        </div>
+      </div> 
 
-    <div id="footer" style="background-color:#222222; width:100%;">
-      <br><br>
-      <p><a href="http://www.etfos.unios.hr/">ETFOS</a></p>
-      <p>Ova je stranica napravljena kao projekt za kolegij <a href="https://loomen.carnet.hr/course/view.php?id=3626">Multimedijska tehnika</a>&nbsp;- akademska godina 2015./2016.</p>
+
+        <div class="razmak"></div>
+      </div>
+
+      <div id="footer" style="background-color:#222222; width:100%;">
+        <br><br>
+        <p><a href="http://www.etfos.unios.hr/">ETFOS</a></p>
+        <p>Ova je stranica napravljena kao projekt za kolegij <a href="https://loomen.carnet.hr/course/view.php?id=3626">Multimedijska tehnika</a>&nbsp;- akademska godina 2015./2016.</p>
+      </div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -115,7 +140,10 @@
     <script>
       $(document).ready(function(){
         $("#sticker").sticky({topSpacing:0});
-      });
+          $("#Marko").click(function(){
+            $("#myModal").modal();
+          });
+        });
     </script>
   </body>
 </html>
