--- a/index.html
+++ b/index.html
@@ -82,21 +82,23 @@
 
       <div class="row" style="margin:0px;">
         <div class="col-md-8 col-md-offset-2" style="border-top: rgba(155, 155, 155, 0.5) solid 1px; padding-bottom:90px;"></div>
-        <div class="col-md-6" style="margin-bottom:100px;">
-          <center>
-            <a href="#" id="MarinaPic"><img class="img-circle" src="images/marina.jpg" alt="Generic placeholder image" width="200" height="200"></a>
-            <h2><a id="Marina">Marina Kovač</a></h2>
-            <p></p>
-            <p><a class="btn btn-success" href="#" role="button">Što me dijeli od željene djelatnosti? &raquo;</a></p>
-          </center>
-        </div>
-        <div class="col-md-6">
-          <center>
-            <a href="#" id="MarkoPic"><img class="img-circle" src="images/marko.jpg" alt="Generic placeholder image" width="200" height="200"></a>
-            <h2><a id="Marko">Marko Bilić</a></h2>
-            <p></p>
-            <p><a class="btn btn-success" href="#" role="button">Što me dijeli od željene djelatnosti? &raquo;</a></p>
-          </center>
+        <div class="col-md-8 col-md-offset-2">
+          <div class="col-md-6" style="margin-bottom:100px;">
+            <center>
+              <a href="#" id="MarinaPic"><img class="img-circle" src="images/marina.jpg" alt="Generic placeholder image" width="200" height="200"></a>
+              <h2><a id="Marina">Marina Kovač</a></h2>
+              <p></p>
+              <p><a class="btn btn-success" href="#" role="button">Što me dijeli od željene djelatnosti? &raquo;</a></p>
+            </center>
+          </div>
+          <div class="col-md-6">
+            <center>
+              <a href="#" id="MarkoPic"><img class="img-circle" src="images/marko.jpg" alt="Generic placeholder image" width="200" height="200"></a>
+              <h2><a id="Marko">Marko Bilić</a></h2>
+              <p></p>
+              <p><a class="btn btn-success" href="#" role="button">Što me dijeli od željene djelatnosti? &raquo;</a></p>
+            </center>
+          </div>
         </div>
         
       <div class="modal fade" id="markomod" role="dialog">
