--- a/marko.html
+++ b/marko.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <link rel="shortcut icon" href="images/favicon.ico">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
